<resources>
    <string name="app_name">DnDCharacterApp</string>
    <string name="add">add</string>
    <string name="item">Item</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="classText">Class</string>
    <string name="level">Level</string>
    <string name="alignment">Alignment</string>
    <string name="current_hit_points">Current Hit Points</string>
    <string name="max_hit_points">Max Hit Points</string>
    <string name="armor_class">Armor Class</string>
    <string name="proficiency_bonus">Proficiency Bonus</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="image_url">Image Url</string>
    <string name="speed">Speed</string>
    <string name="roll_stats">ROLL STATS</string>
    <string name="strength">Strength</string>
    <string name="modifier">Modifier</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="skill_name">Skill Name</string>
    <string name="proficient">Proficient</string>
    <string name="bonus">Bonus</string>
    <string name="next_skill">NEXT SKILL</string>
    <string name="background_name">Background Name</string>
    <string name="personality_trait">Personality Trait</string>
    <string name="ideals">Ideals</string>
    <string name="bonds">Bonds</string>
    <string name="flaws">Flaws</string>
    <string name="ability_name">Ability Name</string>
    <string name="ability_desc">Ability Desc</string>
    <string name="level_requirement">Level Requirement</string>
    <string name="add_another_ability">ADD ANOTHER ABILITY</string>
    <string name="add_spell">ADD SPELL</string>
    <string name="description">Description</string>
    <string name="duration">Duration</string>
    <string name="components">Components</string>
    <string name="range">Range</string>
    <string name="casting_time">Casting Time</string>
    <string name="school">School</string>
    <string name="spell_name">Spell Name</string>
    <string name="feat_name">Feat Name</string>
    <string name="prerequisite">Prerequisite</string>
    <string name="add_feat">ADD FEAT</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="add_item">ADD ITEM</string>
    <string name="note_text">Note text</string>
    <string name="add_note">ADD NOTE</string>
    <string name="story">Story</string>
    <string name="go">GO</string>
    <string name="update">update</string>
    <string-array name="tables">
        <item>Character</item>
        <item>Skills</item>
        <item>Background</item>
        <item>Inventory</item>
        <item>Notes</item>
        <item>Spells</item>
        <item>Feats</item>
        <item>Stats</item>
        <item>Abilities</item>
    </string-array>
</resources>