<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpellsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSpells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <EditText
            android:id="@+id/editTextTextNameSpells"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/spell_name" />

        <EditText
            android:id="@+id/editTextNumberLevelSpells"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/level"/>

        <EditText
            android:id="@+id/editTextTextSchool"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/school" />

        <EditText
            android:id="@+id/editTextTextCastingTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/casting_time" />

        <EditText
            android:id="@+id/editTextTextRange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/range" />

        <EditText
            android:id="@+id/editTextTextComponents"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/components" />

        <EditText
            android:id="@+id/editTextTextDuration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/duration" />

        <EditText
            android:id="@+id/editTextTextDescSpells"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/description" />

        <Button
            android:id="@+id/buttonAddSpells"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_spell" />
    </LinearLayout>
</FrameLayout>