<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <EditText
            android:id="@+id/editTextTextNameInventory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/editTextNumberQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/quantity"/>

        <EditText
            android:id="@+id/editTextNumberWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/weight"/>

        <EditText
            android:id="@+id/editTextTextDescInventory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/description" />

        <Button
            android:id="@+id/buttonAddItem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_item" />

    </LinearLayout>
</FrameLayout>