<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNextStats"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <Button
            android:id="@+id/buttonRoll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/roll_stats" />

        <EditText
            android:id="@+id/editTextNumberStrength"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/strength"/>

        <EditText
            android:id="@+id/editTextNumberStrengthMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>

        <EditText
            android:id="@+id/editTextNumberDexterity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/dexterity"/>

        <EditText
            android:id="@+id/editTextNumberDexterityMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>

        <EditText
            android:id="@+id/editTextNumberConstitution"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/constitution"/>

        <EditText
            android:id="@+id/editTextNumberConstitutionMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>

        <EditText
            android:id="@+id/editTextNumberIntelligence"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/intelligence"/>

        <EditText
            android:id="@+id/editTextNumberIntelligenceMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>

        <EditText
            android:id="@+id/editTextNumberWisdom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/wisdom"/>

        <EditText
            android:id="@+id/editTextNumberWisdomMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>

        <EditText
            android:id="@+id/editTextNumberCharisma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/charisma"/>

        <EditText
            android:id="@+id/editTextNumberCharismaMod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/modifier"/>
    </LinearLayout>
</FrameLayout>