<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkillsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNextSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textViewSkill"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBoxProficient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/proficient" />

        <EditText
            android:id="@+id/editTextNumberBonus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/bonus"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/next_skill" />


    </LinearLayout>
</FrameLayout>